<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/nav_menu" />
    <item
        android:id="@+id/weatherFragment"
        android:icon="@drawable/ic_nav_weather"
        android:title="@string/nav_weather" />
    <item
        android:id="@+id/cropsFragment"
        android:icon="@drawable/ic_nav_crops"
        android:title="@string/nav_crops" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
